#fix: alignment

--- a/src/pages/HomePage/HomePage.module.scss
+++ b/src/pages/HomePage/HomePage.module.scss
@@ -10,7 +10,7 @@
   transform: translateY(-50%);
 }
 
-@media only sceen and (min-width: 768px) {
+@media only screen and (min-width: 768px) {
   .titleContainer {
     left: 50%;
     right: unset;
